--- a/view/App.view.xml
+++ b/view/App.view.xml
@@ -1,4 +1,5 @@
 <mvc:View
+    id="rootView"
 	controllerName="com.broadspectrum.etime.mgr.view.App"
 	xmlns:mvc="sap.ui.core.mvc"
 	displayBlock="true"
