--- a/view/Detail2.view.xml
+++ b/view/Detail2.view.xml
@@ -2,7 +2,7 @@
 	xmlns:l="sap.ui.layout" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m">
 	<Page class="sapUiFioriObjectPage" id="detailPage" navButtonPress="onNavBack" showNavButton="true" title="{Ename} - {Datetxt}">
 		<content>
-			<ObjectHeader title="{Atttxt}"></ObjectHeader>
+			<ObjectHeader title="{Atttxt}" number="{Statustxt}" numberState="{path:'Status',formatter:'.getHeaderStatusState'}"></ObjectHeader>
 			<f:SimpleForm emptySpanM="4" labelSpanL="3" columnsL="1" editable="false" emptySpanL="4" columnsM="1" id="detailForm" labelSpanM="3"
 				layout="ResponsiveGridLayout" maxContainerCols="2" minWidth="1024">
 				<f:content>
