--- a/view/Welcome.view.xml
+++ b/view/Welcome.view.xml
@@ -3,13 +3,17 @@
 	xmlns="sap.m"
 	xmlns:core="sap.ui.core"
 	xmlns:mvc="sap.ui.core.mvc" >
-	<Page
-		enableScrolling="false">
-		<footer>
-			<Toolbar>
-			</Toolbar>
-		</footer>
+	<Page enableScrolling="false">
+		<!--<footer>-->
+		<!--	<Toolbar>-->
+		<!--	</Toolbar>-->
+		<!--</footer>-->
 		<content>
+        	<MessagePage id="messagePage" showHeader="false" 
+        	    text="Welcome to My Timesheets Approval"
+        	    description="Select a team member from the list to get started."
+        	    icon="sap-icon://approvals">
+        	</MessagePage>		
 		</content>
 	</Page>
 </mvc:View>
